--- a/notificatorlib/src/main/res/drawable/circle_green.xml
+++ b/notificatorlib/src/main/res/drawable/circle_green.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_pressed="true" >
+        <shape android:shape="oval"  >
+            <stroke android:width="1dip" android:color="#162B03" />
+            <solid  android:color="#1F3A04"/>
+        </shape>
 
-<item android:state_pressed="false">
-    <shape android:shape="oval">
-        <solid android:color="@color/green"/>
-    </shape>
-</item>
-<item android:state_pressed="true">
-    <shape android:shape="oval">
-        <solid android:color="@color/green_dark"/>
-    </shape>
-</item>
+    </item>
+    <item android:state_focused="true">
+        <shape android:shape="oval"  >
+            <stroke android:width="1dip" android:color="#162B03" />
+            <solid  android:color="#1F3A04"/>
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="oval" >
+            <gradient
+                android:angle="90"
+                android:centerX="90%"
+                android:centerColor="#0A410C"
+                android:startColor="#1F5315"
+                android:endColor="#28612D"
+                android:type="linear" />
+            <stroke android:width="1dip" android:color="#162B03" />
+        </shape>
+    </item>
 </selector>
