--- a/notificatorlib/src/main/res/drawable/circle_green.xml
+++ b/notificatorlib/src/main/res/drawable/circle_green.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="true" >
         <shape android:shape="oval"  >
-            <stroke android:width="1dip" android:color="#162B03" />
+            <stroke android:width="2dip" android:color="#162B03" />
             <solid  android:color="#1F3A04"/>
         </shape>
 
     </item>
     <item android:state_focused="true">
         <shape android:shape="oval"  >
-            <stroke android:width="1dip" android:color="#162B03" />
+            <stroke android:width="2dip" android:color="#162B03" />
             <solid  android:color="#1F3A04"/>
         </shape>
     </item>
@@ -19,10 +19,10 @@
                 android:angle="90"
                 android:centerX="90%"
                 android:centerColor="#0A410C"
-                android:startColor="#1F5315"
-                android:endColor="#28612D"
+                android:startColor="#28681A"
+                android:endColor="#094E0C"
                 android:type="linear" />
-            <stroke android:width="1dip" android:color="#162B03" />
+            <stroke android:width="2dip" android:color="#162B03" />
         </shape>
     </item>
 </selector>
