--- a/notificatorlib/src/main/res/layout/chat_cell_out.xml
+++ b/notificatorlib/src/main/res/layout/chat_cell_out.xml
@@ -22,6 +22,35 @@
         android:layout_marginLeft="16dp"
         android:layout_weight="1"
         android:text="" />
+
+    <LinearLayout
+        android:id="@+id/lnAudio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="6"
+        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/ivPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:focusable="true"
+                android:clickable="true"
+                android:src="@drawable/ic_play_arrow"/>
+        </LinearLayout>
+        <SeekBar
+            android:id="@+id/sbPlay"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/chat_text_datetime"
         android:layout_width="wrap_content"
