--- a/notificatorlib/src/main/res/layout/chat_cell_out.xml
+++ b/notificatorlib/src/main/res/layout/chat_cell_out.xml
@@ -32,6 +32,7 @@
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical">
         <LinearLayout
+            android:id="@+id/lnPlay"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content">
@@ -47,7 +48,8 @@
         <SeekBar
             android:id="@+id/sbPlay"
             android:layout_width="0dp"
-            android:layout_weight="4"
+            android:layout_weight="5"
+            android:layout_marginRight="20dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
