--- a/notificatorlib/src/main/res/layout/chat_cell_out.xml
+++ b/notificatorlib/src/main/res/layout/chat_cell_out.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -22,6 +21,13 @@
         android:layout_marginLeft="16dp"
         android:layout_weight="1"
         android:text="" />
+    <ImageView
+        android:id="@+id/ivPreviewImage"
+        android:layout_width="100sp"
+        android:layout_height="100sp"
+        android:layout_marginLeft="20dp"
+        android:focusable="true"
+        android:clickable="true"/>
 
     <LinearLayout
         android:id="@+id/lnAudio"
