--- a/notificatorlib/src/main/res/drawable/send_selector.xml
+++ b/notificatorlib/src/main/res/drawable/send_selector.xml
@@ -18,9 +18,9 @@
             <gradient
                 android:angle="90"
                 android:centerX="90%"
-                android:centerColor="#0E4474"
-                android:startColor="#2155C0"
-                android:endColor="#0E4474"
+                android:centerColor="#1562A7"
+                android:startColor="#1552D1"
+                android:endColor="#1367B1"
                 android:type="linear" />
             <stroke android:width="1dip" android:color="#383737" />
         </shape>
