--- a/notificatorlib/src/main/res/layout/chat_cell_out.xml
+++ b/notificatorlib/src/main/res/layout/chat_cell_out.xml
@@ -5,7 +5,23 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:gravity="end"
+    android:minWidth="150dp"
     android:id="@+id/lnLayout">
+
+    <LinearLayout
+        android:id="@+id/lnDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/bt_white"
+            android:background="@drawable/date_item_bg"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,7 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start" />
-        <ImageView
+
+        <com.siggytech.view.MyImage
             android:id="@+id/ivPreviewImage"
             android:layout_width="100sp"
             android:layout_height="100sp"
@@ -35,30 +52,44 @@
             android:id="@+id/lnAudio"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="6"
+            android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical">
             <LinearLayout
                 android:id="@+id/lnPlay"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical">
                 <ImageView
                     android:id="@+id/ivPlay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="34dp"
+                    android:layout_height="34dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
                     android:focusable="true"
                     android:clickable="true"
                     android:src="@drawable/ic_play_arrow"/>
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/sbPlay"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
-            <SeekBar
-                android:id="@+id/sbPlay"
-                android:layout_width="0dp"
-                android:layout_weight="5"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tvAudioDuration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="53dp"
+                    android:layout_marginStart="53dp"
+                    android:textColor="@color/bt_dark_gray"
+                    android:textSize="13sp"/>
+            </LinearLayout>
+
         </LinearLayout>
 
         <TextView
@@ -66,11 +97,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:textSize="14sp"
-            android:textColor="@color/light_grey"
-            android:textStyle="italic"/>
+            android:textSize="13sp"
+            android:textColor="@color/bt_dark_gray"
+            android:textStyle="normal"/>
     </LinearLayout>
 
 
