--- a/notificatorlib/src/main/res/layout/activity_image.xml
+++ b/notificatorlib/src/main/res/layout/activity_image.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".TransitionToActivity"
+    tools:context=".ImageActivity"
     android:id="@+id/iv_photo"/>
