--- a/notificatorlib/src/main/res/layout/activity_util.xml
+++ b/notificatorlib/src/main/res/layout/activity_util.xml
@@ -7,7 +7,7 @@
     android:background="@color/color_transparent"
     android:gravity="center_horizontal"
     android:minWidth="600dp">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
@@ -55,9 +55,9 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
@@ -79,5 +79,5 @@
                 android:textStyle="bold"/>
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
