--- a/notificatorlib/src/main/res/layout/chat_cell_out.xml
+++ b/notificatorlib/src/main/res/layout/chat_cell_out.xml
@@ -71,7 +71,7 @@
                     android:focusable="true"
                     android:clickable="true"
                     android:src="@drawable/ic_play_arrow"/>
-                <android.support.v7.widget.AppCompatSeekBar
+                <androidx.appcompat.widget.AppCompatSeekBar
                     android:id="@+id/sbPlay"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content" />
