--- a/notificatorlib/src/main/res/layout/activity_util.xml
+++ b/notificatorlib/src/main/res/layout/activity_util.xml
@@ -32,7 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:text="Cámara"
+                    android:text="@string/camera"
                     android:textColor="@color/bt_black"/>
             </LinearLayout>
             <LinearLayout
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:text="Fotos y Videos"
+                    android:text="@string/photo_videos"
                     android:textColor="@color/bt_black"/>
             </LinearLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="Cancelar"
+                android:text="@string/cancel"
                 android:textColor="@color/bt_blue"
                 android:textStyle="bold"/>
         </LinearLayout>
