--- a/notificatorlib/src/main/res/layout/activity_util.xml
+++ b/notificatorlib/src/main/res/layout/activity_util.xml
@@ -25,6 +25,7 @@
                 android:orientation="horizontal"
                 android:padding="15dp">
                 <ImageView
+                    android:id="@+id/ivCamera"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_photo_camera_24dp" />
@@ -32,6 +33,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:text="@string/camera"
                     android:textColor="@color/bt_black"/>
             </LinearLayout>
@@ -42,6 +45,7 @@
                 android:orientation="horizontal"
                 android:padding="15dp">
                 <ImageView
+                    android:id="@+id/ivPhotoVideo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_insert_photo_24dp" />
@@ -49,6 +53,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:text="@string/photo_videos"
                     android:textColor="@color/bt_black"/>
             </LinearLayout>
@@ -71,11 +77,12 @@
             android:gravity="center"
             android:padding="15dp">
             <TextView
+                android:id="@+id/tvCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:text="@string/cancel"
-                android:textColor="@color/bt_blue"
+                android:textColor="@color/bt_black"
                 android:textStyle="bold"/>
         </LinearLayout>
 
