--- a/notificatorlib/src/main/res/layout/activity_util.xml
+++ b/notificatorlib/src/main/res/layout/activity_util.xml
@@ -8,6 +8,7 @@
     android:gravity="center_horizontal"
     android:minWidth="600dp">
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardOptions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
@@ -30,6 +31,7 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_photo_camera_24dp" />
                 <TextView
+                    android:id="@+id/tvCameraTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
@@ -50,6 +52,7 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_insert_photo_24dp" />
                 <TextView
+                    android:id="@+id/tvPhotoVideoTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
@@ -64,6 +67,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
