--- a/notificatorlib/src/main/res/layout/chat_root.xml
+++ b/notificatorlib/src/main/res/layout/chat_root.xml
@@ -3,10 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:id="@+id/frame"
