--- a/notificatorlib/src/main/res/layout/activity_attach_menu.xml
+++ b/notificatorlib/src/main/res/layout/activity_attach_menu.xml
@@ -77,7 +77,8 @@
                         app:layout_constraintStart_toStartOf="@+id/tvPhoto"
                         app:layout_constraintEnd_toEndOf="@+id/tvPhoto"
                         app:layout_constraintTop_toBottomOf="@+id/tvPhoto"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:visibility="gone"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
